Adding first clean file

--- a/project_main.ipynb
+++ b/project_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,32 +18,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 80,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country ID</th>\n",
+       "      <th>Series</th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Education Spend (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Government Expenditure</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>17.0676</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>3.462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Government Expenditure</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>12.509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3.242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Government Expenditure</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>15.6614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3.9268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Government Expenditure</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>11.358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>3.2387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Government Expenditure</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>11.1772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>GDP</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>3.2687</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0 Country ID                  Series Country Name  Year Education Spend (%)\n",
+       "0          4  Government Expenditure  Afghanistan  2010             17.0676\n",
+       "1          4                     GDP  Afghanistan  2010               3.462\n",
+       "2          4  Government Expenditure  Afghanistan  2015              12.509\n",
+       "3          4                     GDP  Afghanistan  2015               3.242\n",
+       "4          4  Government Expenditure  Afghanistan  2017             15.6614\n",
+       "5          4                     GDP  Afghanistan  2017              3.9268\n",
+       "6          8  Government Expenditure      Albania  2005              11.358\n",
+       "7          8                     GDP      Albania  2005              3.2387\n",
+       "8          8  Government Expenditure      Albania  2007             11.1772\n",
+       "9          8                     GDP      Albania  2007              3.2687"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read in the csv raw data file for public education expendtiure\n",
-    "\n",
+    "csvfile = pd.read_csv(\"data_source/raw_data/public_expenditure_education.csv\")\n",
     "#Convert raw data files to Data Frame\n",
+    "raw_df = pd.DataFrame(csvfile)\n",
+    "#Remove the first row and replace with second row\n",
+    "new_header = raw_df.iloc[0]\n",
+    "raw_df = raw_df[1:]\n",
+    "raw_df.columns = new_header \n",
+    "#Fill in blank column header\n",
     "\n",
-    "#Remove columns that are not needed (Series, Source, Footnote)\n",
+    "raw_df.columns = raw_df.columns.fillna('Country Name')\n",
     "\n",
-    "#Display the data frame"
+    "#Remove columns that are not needed (Source, Footnote)\n",
+    "clean_df = raw_df[['Region/Country/Area','Series', 'Country Name','Year','Value']]\n",
+    "clean_df = clean_df.rename(columns={'Region/Country/Area': 'Country ID', 'Value': 'Education Spend (%)' })\n",
+    "\n",
+    "clean_df = clean_df.loc[clean_df['Series'].apply(lambda x: x in ['Public expenditure on education (% of government expenditure)','Public expenditure on education (% of GDP)'])]\n",
+    "\n",
+    "clean_df['Series'] = clean_df['Series'].replace('Public expenditure on education (% of government expenditure)', 'Government Expenditure')\n",
+    "clean_df['Series'] = clean_df['Series'].replace('Public expenditure on education (% of GDP)', 'GDP')\n",
+    "clean_df =clean_df.reset_index(drop=True)\n",
+    "#Display the data frame\n",
+    "clean_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Write to csv in output_data\n",
+    "clean_df.to_csv ('data_source/output_data/public_education_clean.csv', index = False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country ID</th>\n",
+       "      <th>Series</th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>CPI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>100.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>132.1177</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>137.9046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>144.7692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>100.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0 Country ID   Series Country Name  Year       CPI\n",
+       "2          4  General  Afghanistan  2010  100.0000\n",
+       "3          4  General  Afghanistan  2015  132.1177\n",
+       "4          4  General  Afghanistan  2016  137.9046\n",
+       "5          4  General  Afghanistan  2017  144.7692\n",
+       "6          4     Food  Afghanistan  2010  100.0000"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Read in the csv raw data file for Consumer Price Index expendtiure\n",
+    "# Read in the csv raw data file for public education expendtiure\n",
+    "csvfile2 = pd.read_csv(\"data_source/raw_data/consumer_price_index.csv\", encoding='latin-1')\n",
+    "#Convert raw data files to Data Frame\n",
+    "raw2_df = pd.DataFrame(csvfile2)\n",
+    "#Remove the first row and replace with second row\n",
+    "raw2_header = new_df.iloc[0]\n",
+    "raw2_df = new_df[1:]\n",
+    "raw2_df.columns = new_header \n",
+    "#Fill in blank column header\n",
     "\n",
+    "raw2_df.columns = raw2_df.columns.fillna('Country Name')\n",
     "#Convert raw data files to Data Frame\n",
     "\n",
-    "#Remove columns that are not needed (Series, Source, Footnote)\n",
+    "#Remove columns that are not needed (Source, Footnote)\n",
+    "cpi_df = raw2_df[['Region/Country/Area','Series', 'Country Name','Year','Value']]\n",
+    "cpi_df = cpi_df.rename(columns={'Region/Country/Area': 'Country ID','Value': 'CPI' })\n",
     "\n",
-    "#Display the data frame"
+    "\n",
+    "cpi_df['Series'] = cpi_df['Series'].replace('Consumer price index: General', 'General')\n",
+    "cpi_df['Series'] = cpi_df['Series'].replace('Consumer price index: Food', 'Food')\n",
+    "\n",
+    "#Display the data frame\n",
+    "cpi_df.head()"
    ]
   },
   {
