clean gdp and cpi

--- a/project_main.ipynb
+++ b/project_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +58,7 @@
        "      <td>Government Expenditure</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2010</td>\n",
-       "      <td>17.0676</td>\n",
+       "      <td>17.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -66,7 +66,7 @@
        "      <td>GDP</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2010</td>\n",
-       "      <td>3.462</td>\n",
+       "      <td>3.46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -74,7 +74,7 @@
        "      <td>Government Expenditure</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2015</td>\n",
-       "      <td>12.509</td>\n",
+       "      <td>12.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -82,7 +82,7 @@
        "      <td>GDP</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2015</td>\n",
-       "      <td>3.242</td>\n",
+       "      <td>3.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -90,7 +90,7 @@
        "      <td>Government Expenditure</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2017</td>\n",
-       "      <td>15.6614</td>\n",
+       "      <td>15.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -98,7 +98,7 @@
        "      <td>GDP</td>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>2017</td>\n",
-       "      <td>3.9268</td>\n",
+       "      <td>3.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -106,7 +106,7 @@
        "      <td>Government Expenditure</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2005</td>\n",
-       "      <td>11.358</td>\n",
+       "      <td>11.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -114,7 +114,7 @@
        "      <td>GDP</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2005</td>\n",
-       "      <td>3.2387</td>\n",
+       "      <td>3.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -122,7 +122,7 @@
        "      <td>Government Expenditure</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2007</td>\n",
-       "      <td>11.1772</td>\n",
+       "      <td>11.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -130,27 +130,27 @@
        "      <td>GDP</td>\n",
        "      <td>Albania</td>\n",
        "      <td>2007</td>\n",
-       "      <td>3.2687</td>\n",
+       "      <td>3.27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "0 Country ID                  Series Country Name  Year Education Spend (%)\n",
-       "0          4  Government Expenditure  Afghanistan  2010             17.0676\n",
-       "1          4                     GDP  Afghanistan  2010               3.462\n",
-       "2          4  Government Expenditure  Afghanistan  2015              12.509\n",
-       "3          4                     GDP  Afghanistan  2015               3.242\n",
-       "4          4  Government Expenditure  Afghanistan  2017             15.6614\n",
-       "5          4                     GDP  Afghanistan  2017              3.9268\n",
-       "6          8  Government Expenditure      Albania  2005              11.358\n",
-       "7          8                     GDP      Albania  2005              3.2387\n",
-       "8          8  Government Expenditure      Albania  2007             11.1772\n",
-       "9          8                     GDP      Albania  2007              3.2687"
+       "0 Country ID                  Series Country Name  Year  Education Spend (%)\n",
+       "0          4  Government Expenditure  Afghanistan  2010                17.07\n",
+       "1          4                     GDP  Afghanistan  2010                 3.46\n",
+       "2          4  Government Expenditure  Afghanistan  2015                12.51\n",
+       "3          4                     GDP  Afghanistan  2015                 3.24\n",
+       "4          4  Government Expenditure  Afghanistan  2017                15.66\n",
+       "5          4                     GDP  Afghanistan  2017                 3.93\n",
+       "6          8  Government Expenditure      Albania  2005                11.36\n",
+       "7          8                     GDP      Albania  2005                 3.24\n",
+       "8          8  Government Expenditure      Albania  2007                11.18\n",
+       "9          8                     GDP      Albania  2007                 3.27"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,25 +165,26 @@
     "raw_df = raw_df[1:]\n",
     "raw_df.columns = new_header \n",
     "#Fill in blank column header\n",
-    "\n",
     "raw_df.columns = raw_df.columns.fillna('Country Name')\n",
-    "\n",
+    "#Convert Value to float and round\n",
+    "raw_df['Value'] = round(raw_df['Value'].astype(float),2)\n",
+    "raw_df['Year'] = raw_df['Year'].astype(int)\n",
     "#Remove columns that are not needed (Source, Footnote)\n",
     "clean_df = raw_df[['Region/Country/Area','Series', 'Country Name','Year','Value']]\n",
     "clean_df = clean_df.rename(columns={'Region/Country/Area': 'Country ID', 'Value': 'Education Spend (%)' })\n",
     "\n",
     "clean_df = clean_df.loc[clean_df['Series'].apply(lambda x: x in ['Public expenditure on education (% of government expenditure)','Public expenditure on education (% of GDP)'])]\n",
-    "\n",
     "clean_df['Series'] = clean_df['Series'].replace('Public expenditure on education (% of government expenditure)', 'Government Expenditure')\n",
     "clean_df['Series'] = clean_df['Series'].replace('Public expenditure on education (% of GDP)', 'GDP')\n",
     "clean_df =clean_df.reset_index(drop=True)\n",
     "#Display the data frame\n",
-    "clean_df.head(10)"
+    "\n",
+    "clean_df.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -226,118 +227,272 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
+       "      <th>0</th>\n",
+       "      <td>728</td>\n",
        "      <td>General</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>100.0000</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>4583.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>728</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>4574.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>728</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1660.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
+       "      <td>728</td>\n",
        "      <td>General</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>132.1177</td>\n",
+       "      <td>South Sudan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1592.38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>General</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>137.9046</td>\n",
+       "      <td>862</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Venezuela (Boliv. Rep. of)</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1487.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>4</td>\n",
-       "      <td>General</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>144.7692</td>\n",
+       "      <td>760</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Syrian Arab Republic</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>807.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>4</td>\n",
+       "      <td>862</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Venezuela (Boliv. Rep. of)</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>772.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>760</td>\n",
+       "      <td>General</td>\n",
+       "      <td>Syrian Arab Republic</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>662.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>90</td>\n",
        "      <td>Food</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>100.0000</td>\n",
+       "      <td>Solomon Islands</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>555.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>90</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>Solomon Islands</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>552.52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "0 Country ID   Series Country Name  Year       CPI\n",
-       "2          4  General  Afghanistan  2010  100.0000\n",
-       "3          4  General  Afghanistan  2015  132.1177\n",
-       "4          4  General  Afghanistan  2016  137.9046\n",
-       "5          4  General  Afghanistan  2017  144.7692\n",
-       "6          4     Food  Afghanistan  2010  100.0000"
+       "0 Country ID   Series                Country Name  Year      CPI\n",
+       "0        728  General                 South Sudan  2017  4583.71\n",
+       "1        728     Food                 South Sudan  2017  4574.02\n",
+       "2        728     Food                 South Sudan  2016  1660.87\n",
+       "3        728  General                 South Sudan  2016  1592.38\n",
+       "4        862     Food  Venezuela (Boliv. Rep. of)  2015  1487.20\n",
+       "5        760     Food        Syrian Arab Republic  2016   807.30\n",
+       "6        862  General  Venezuela (Boliv. Rep. of)  2015   772.02\n",
+       "7        760  General        Syrian Arab Republic  2016   662.90\n",
+       "8         90     Food             Solomon Islands  2016   555.40\n",
+       "9         90     Food             Solomon Islands  2015   552.52"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read in the csv raw data file for Consumer Price Index expendtiure\n",
-    "# Read in the csv raw data file for public education expendtiure\n",
     "csvfile2 = pd.read_csv(\"data_source/raw_data/consumer_price_index.csv\", encoding='latin-1')\n",
     "#Convert raw data files to Data Frame\n",
     "raw2_df = pd.DataFrame(csvfile2)\n",
     "#Remove the first row and replace with second row\n",
-    "raw2_header = new_df.iloc[0]\n",
-    "raw2_df = new_df[1:]\n",
+    "raw2_header =  raw2_df.iloc[0]\n",
+    "raw2_df = raw2_df[1:]\n",
     "raw2_df.columns = new_header \n",
     "#Fill in blank column header\n",
-    "\n",
     "raw2_df.columns = raw2_df.columns.fillna('Country Name')\n",
-    "#Convert raw data files to Data Frame\n",
-    "\n",
+    "#Convert Value to float and round\n",
+    "raw2_df['Value'] = round(raw2_df['Value'].astype(float),2)\n",
+    "raw2_df['Year'] = raw2_df['Year'].astype(int)\n",
     "#Remove columns that are not needed (Source, Footnote)\n",
     "cpi_df = raw2_df[['Region/Country/Area','Series', 'Country Name','Year','Value']]\n",
     "cpi_df = cpi_df.rename(columns={'Region/Country/Area': 'Country ID','Value': 'CPI' })\n",
     "\n",
-    "\n",
     "cpi_df['Series'] = cpi_df['Series'].replace('Consumer price index: General', 'General')\n",
     "cpi_df['Series'] = cpi_df['Series'].replace('Consumer price index: Food', 'Food')\n",
-    "\n",
+    "cpi_df =cpi_df.reset_index(drop=True)\n",
     "#Display the data frame\n",
-    "cpi_df.head()"
+    "cpi_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in the csv raw data file for GDP and GDP per Captia expendtiure\n",
-    "\n",
-    "#Convert raw data files to Data Frame\n",
-    "\n",
-    "#Remove columns that are not needed (Series, Source, Footnote)\n",
-    "\n",
-    "#Display the data frame"
+    "#Write to csv in output_data\n",
+    "cpi_df.to_csv ('data_source/output_data/cpi_clean.csv', index = False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country ID</th>\n",
+       "      <th>Series</th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GDP (millions of $)</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>517301.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GDP (millions of $)</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>582440.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GDP (millions of $)</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>1128718.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GDP (millions of $)</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>1966483.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GDP (millions of $)</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2293977.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "0 Country ID               Series Country Name  Year        GDP\n",
+       "0          2  GDP (millions of $)       Africa  1985   517301.0\n",
+       "1          2  GDP (millions of $)       Africa  1995   582440.0\n",
+       "2          2  GDP (millions of $)       Africa  2005  1128718.0\n",
+       "3          2  GDP (millions of $)       Africa  2010  1966483.0\n",
+       "4          2  GDP (millions of $)       Africa  2015  2293977.0"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read in the csv raw data file for Poverty Rate expendtiure\n",
-    "\n",
+    "# Read in the csv raw data file for Consumer Price Index expendtiure\n",
+    "csvfile3 = pd.read_csv(\"data_source/raw_data/gdp_and_gdp_per_capita.csv\", encoding='latin-1')\n",
     "#Convert raw data files to Data Frame\n",
+    "raw3_df = pd.DataFrame(csvfile3)\n",
+    "#Remove the first row and replace with second row\n",
+    "raw3_header =  raw3_df.iloc[0]\n",
+    "raw3_df = raw3_df[1:]\n",
+    "raw3_df.columns = new_header \n",
+    "#Fill in blank column header\n",
+    "raw3_df.columns = raw3_df.columns.fillna('Country Name')\n",
+    "#Convert Value to float and round\n",
+    "raw3_df['Value'] = pd.to_numeric(raw3_df['Value'], errors='coerce')\n",
+    "raw3_df['Year'] = raw3_df['Year'].astype(int)\n",
+    "#Remove columns that are not needed (Source, Footnote)\n",
+    "gdp_df = raw3_df[['Region/Country/Area','Series', 'Country Name','Year','Value']]\n",
+    "gdp_df = gdp_df.rename(columns={'Region/Country/Area': 'Country ID','Value': 'GDP' })\n",
+    "gdp_df['Series'] = gdp_df['Series'].replace('GDP in current prices (millions of US dollars)', 'GDP (millions of $)')\n",
     "\n",
-    "#Remove columns that are not needed (Series, Source, Footnote)\n",
+    "#Remove Country ID 1 (Totals)\n",
     "\n",
-    "#Display the data frame"
+    "\n",
+    "totals = gdp_df[gdp_df['Country ID'] == '1' ].index\n",
+    "gdp_df.drop(totals , inplace=True)\n",
+    "#Rename values in Series column\n",
+    "gdp_df['Series'] = gdp_df['Series'].replace('GDP per capita (US dollars)', 'GDP per Capita ($)')\n",
+    "gdp_df['Series'] = gdp_df['Series'].replace('GDP in constant 2010 prices (millions of US dollars)', 'GDP in 2010 dollars ($)')\n",
+    "gdp_df =gdp_df.reset_index(drop=True)\n",
+    "gdp_percent_df =gdp_df.loc[gdp_df['Series']== 'GDP real rates of growth (percent)']\n",
+    "\n",
+    "#Remove Percent \n",
+    "percents = gdp_df[gdp_df['Series'] == 'GDP real rates of growth (percent)' ].index\n",
+    "gdp_df.drop(percents , inplace=True)\n",
+    "\n",
+    "#Display the data frame\n",
+    "gdp_df.head()\n"
    ]
   },
   {
