--- a/project_main.ipynb
+++ b/project_main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +150,7 @@
        "9          8                     GDP      Albania  2007                 3.27"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "9         90     Food             Solomon Islands  2015   552.52"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -460,7 +460,7 @@
        "4          2  GDP (millions of $)       Africa  2015  2293977.0"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
     }
    ],
    "source": [
-    "# Read in the csv raw data file for Crime Rate\n",
+    "# Read in the csv raw data file for Labour Force and Unemployment Rate\n",
     "csvfile6 = pd.read_csv(\"data_source/raw_data/labour_force_unemployment.csv\", encoding='latin-1')\n",
     "\n",
     "#Convert raw data files to Data Frame\n",
